package edu.fiuba.algo3.modelo;

public interface Turno {
    public void accionDeTurno();
}
