package edu.fiuba.algo3.modelo.excepciones;

public class CantidadDeRecursoInsuficiente extends RuntimeException {
}
