package edu.fiuba.algo3.modelo.excepciones;

public class CriaderoSinLarvas extends RuntimeException {
}
