@startuml

class Zergs {
    + terminarTurno()
    + construirCriadero(unZangano : Zangano, coord : Coordenadas) : Criadero
    + construirExtractor(unZangano : Zangano, coord : Coordenadas) : Extractor
    + construirReservaDeReproduccion(unZangano : Zangano, coord : Coordenadas) : ReservaDeReproduccion
    + construirGuarida(unZangano : Zangano, coord : Coordenadas) : Guarida
    + construirEspiral(unZangano : Zangano, coord : Coordenadas) : Espiral
    + reclutarZangano(enPosicion : Coordenadas, coord : Coordenadas) : Zangano
}

class Recurso {
    - cantidad
    + Recurso()
    + Recurso(cantidadInicial : int)
    + consumir(cantidad : int)
    + depositar(cantidad : int)
}

abstract class Edificio {
    - posicion : Coordenadas
    - requisitosDeNodo : NodoCompatible
    - estado : EstadoEdificio
    - vida : Vida
    + accionDeTurno()
    + esCompatible(unTerreno : Terreno, unRecurso : NodoRecurso)
    + recibirDanio(cantidad : int)
}

class Zangano {
    - posicion : Coordenadas
    - minerales : Recurso
    + Zangano(posicion : Coordenadas, minerales : Recurso)
    + esCompatible(unTerreno : Terreno, unRecurso : NodoRecurso)
    + extraerMineral()
    + accionDeTurno()
}

interface Turno {
    {abstract} + accionDeTurno()
}

interface Daniable {
    {abstract} + recibirDanio(cantidad : int)
}

class Criadero {
    - imperioZerg : Zergs
    - maxLarvas : int
    - cantidadLarvas : int
    + Criadero(requisitos : NodoCompatible, imperio : Zergs)
    + accionDeTurno()
    + criarZangano()
    - aumentarLarvas()
}

class Extractor {
    - maxZanganos : int
    - trabajadores : Zangano
    + Extractor(requisitos : NodoCompatible, gasVespeno : Recurso)
    + accionDeTurno()
    + recibirZangano(unZangano : Zangano)
}

class ReservaDeReproduccion {
    + ReservaDeReproduccion(requisitos : NodoCompatible)
}

class Guarida {
    + Guarida(requisitos : NodoCompatible)
}

class Espiral {
    + Espiral(requisitos : NodoCompatible)
}

class CantidadDeRecursoInsuficiente <<exception>> {
}

class CriaderoSinLarvas <<exception>> {
}

Zergs -left> "2" Recurso
Zergs -right-> "*" Edificio
Zergs -up-> "*" Zangano

Daniable <|.down. Edificio
Turno <|.left. Zangano
Turno <|.. Edificio

Edificio <|-- Criadero
Edificio <|-- Extractor
Edificio <|-- ReservaDeReproduccion
Edificio <|-- Guarida
Edificio <|-- Espiral

CantidadDeRecursoInsuficiente <.. Recurso
CriaderoSinLarvas <.up. Criadero

@enduml